feat: test recipe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
       "--errors-only"
     ],
     "python.formatting.autopep8Args": ["--indent-size=4"],
-    // "python.defaultInterpreterPath": "venv/bin/python",
+    // "python.defaultInterpreterPath": "env\Scripts\activate",
     "[python]": {
       "editor.defaultFormatter": "ms-python.python", // ms-python.python
       "editor.tabSize": 4,
