feat: Create authors

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,8 +13,8 @@
             ],
             "django": true,
             "autoStartBrowser": false,
-            "program": "${workspaceFolder}\\manage.py"
-            
+            "program": "${workspaceFolder}\\manage.py",
+            "python": "C:\\Users\\X329470\\Desktop\\Estudo\\djngo_inicial\\env\\Scripts\\python.exe"
         }
     ]
 }
